// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Select component Should be focused 1`] = `
<div
  className="select"
>
  <select
    className="is-focused"
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should be hovered 1`] = `
<div
  className="select"
>
  <select
    className="is-hovered"
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should be large, red, disabled and multioption 1`] = `
<div
  className="select is-large is-danger is-multiple"
>
  <select
    disabled={true}
    multiple={true}
  >
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should be loading 1`] = `
<div
  className="select is-loading"
>
  <select>
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should be rounded 1`] = `
<div
  className="select is-rounded"
>
  <select>
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should concat classname in props with Bulma classname 1`] = `
<div
  className="select other-class this-is-a-test"
>
  <select>
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should exist 1`] = `[Function]`;

exports[`Select component Should have select classname 1`] = `
<div
  className="select"
>
  <select>
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;

exports[`Select component Should use inline styles 1`] = `
<div
  className="select"
  style={
    Object {
      "width": "100%",
    }
  }
>
  <select>
    <option>
      1
    </option>
    <option>
      2
    </option>
    <option>
      3
    </option>
  </select>
</div>
`;
